--- a/netflix-clone/src/Components/Footer/footer.css
+++ b/netflix-clone/src/Components/Footer/footer.css
@@ -6,10 +6,10 @@
 }
 .footer_inner_container {
   width: 60%;
-  background-color: red;
+  /* background-color: red; */
 }
 .footer_icons {
-  background-color: blue;
+  /* background-color: blue; */
   width: 12%;
   display: flex;
   justify-content: space-between;
@@ -26,7 +26,7 @@
   flex-direction: column;
   justify-content: space-around;
   height: 12vh;
-  background-color: blue;
+  /* background-color: blue; */
 }
 .footer_data ul li {
   cursor: pointer;
