--- a/netflix-clone/src/Components/Footer/footer.css
+++ b/netflix-clone/src/Components/Footer/footer.css
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: #fff 1px solid;
+  /* border: #fff 0.2px solid; */
   width: 10%;
   margin: 10px 0;
   cursor: pointer;
