--- a/netflix-clone/src/index.css
+++ b/netflix-clone/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900 family=lexend:weight@100;200;300;400;500;600;700;800;900 &display=swap");
 
 :root {
-  __font-base: "Lexend", sans-serif;
+  /* __font-base: "Lexend", sans-serif; */
   --font-second-base: "inter" sans-serif;
   --bg-color: #111;
   --primary-color: #ffffff;
@@ -13,5 +13,5 @@
   box-sizing: border-box;
 }
 body {
-  background: #111;
+  background-color: #111;
 }
